# gparallel

./: Cargo.toml  README.md  build-release.sh
.github/workflows/: release.yml
src/: client_old.rs  main.rs  scheduler.rs  server_old.rs  standalone.rs  ui.rs
test/: command.txt  gpu_echo.sh
