[package]
name = "gparallel"
version = "1.0.0"
description = "Single‑binary workstation GPU scheduler: feed a list of shell commands and gparallel will run them one‑by‑one on every visible GPU (1 GPU per process). Perfect for researchers who don't need heavyweight clusters like Slurm or run.ai."
license = "MIT"
readme = "README.md"
keywords = ["gpu", "scheduler", "cuda", "parallel", "cli"]
repository = "https://github.com/combinatrix-ai/gparallel"
edition = "2021"

[dependencies]
anyhow = "1"
clap   = { version = "4", features = ["derive"] }
tokio  = { version = "1", features = ["full"] }
uuid   = { version = "1", features = ["v4"] }
nvml-wrapper = "0.9"
crossterm = "0.27"
ratatui = "0.26"
atty = "0.2"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
nix = { version = "0.27", features = ["process", "signal"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
